<resources>
    <string name="app_name">ZhiAi</string>
    <string name="http_exception">服务器异常</string>
    <string name="http_steam_exception">提交失败,请重试</string>
    <string name="http_error">服务器错误</string>
    <string name="price_format">￥%s</string>
    <string name="price_total_format">总价：￥%s</string>
    <string name="count_format">×%s</string>
    <string name="count_total_format">共%s件</string>
    <string name="pay_format">去结算(%d)</string>

    <string name="identity_user">我是用户</string>
    <string name="identity_doctor">我是医生</string>
    <string name="login_phone">请输入手机号码</string>
    <string name="login_password">请输入密码</string>
    <string name="register_name">昵称</string>
    <string name="register_name_hint">请输入昵称</string>
    <string name="register_sex">性别</string>
    <string name="register_sex_hint">请选择性别</string>
    <string name="register_phone">手机号</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_code">验证码</string>
    <string name="register_code_null_hint">请输入验证码</string>
    <string name="register_code_error_hint">验证码错误</string>
    <string name="register_password">密码</string>
    <string name="register_password_old_hint">请输入旧密码</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="old_password">旧密码</string>
    <string name="update_password">新密码</string>
    <string name="update_password_comfirm">确认密码</string>
    <string name="update_password_title">修改密码</string>
    <string name="find_password_title">找回密码</string>
    <string name="password_different_error">两次输入密码不一致</string>
    <string name="register_agree">注册既代表您已阅读并同意</string>
    <string name="register_copyright">《至爱医疗用户服务条款》</string>
    <string name="register_doctor_info">填写账号信息</string>
    <string name="register_doctor_info_tip">为了给您提供更好的服务，请填写真实的信息</string>
    <string name="register_doctor_name">姓名</string>
    <string name="register_doctor_hospital">医院</string>
    <string name="register_doctor_hospital_hint">请选择医院</string>
    <string name="register_doctor_department">科室</string>
    <string name="register_doctor_department_hint">请选择科室</string>
    <string name="register_doctor_post">职称</string>
    <string name="register_doctor_post_hint">请选择职称</string>
    <string name="register_doctor_header">头衔</string>
    <string name="register_doctor_header_hint2">请输入头衔</string>
    <string name="register_doctor_header_hint">如“全国著名皮肤科教授”</string>
    <string name="register_doctor_price">咨询价格</string>
    <string name="register_doctor_price_hint2">请填写咨询价格</string>
    <string name="register_doctor_price_unit">元/小时</string>
    <string name="register_doctor_profession">擅长领域</string>
    <string name="register_doctor_information">个人简介</string>
    <string name="register_doctor_information_hint">您可以在输入框输入您个人简介，包括毕业的学校，工作年限，工作经历等内容</string>
    <string name="register_doctor_profession_hint2">请填写擅长领域</string>
    <string name="register_doctor_profession_hint">如：暗疮、急性荨麻疹、湿疹等（50字以内）</string>
    <string name="register_hospital_select">选择医院</string>
    <string name="register_hospital_position">您的位置</string>
    <string name="register_hospital_position_select">切换地区</string>
    <string name="register_department_select">选择科室</string>
    <string name="register_post_select">选择职称</string>

    <string name="button_login">登录</string>
    <string name="button_register">注册</string>
    <string name="button_forgot">忘记密码？</string>
    <string name="button_get_code">点击获取验证码</string>
    <string name="button_submit">提交</string>
    <string name="button_save_message">保存信息</string>
    <string name="button_save">保存</string>
    <string name="button_cancel">取消</string>
    <string name="button_delete">删除</string>
    <string name="button_publish">发布</string>
    <string name="button_sure">确定</string>
    <string name="button_next">下一步</string>
    <string name="button_feel">立即体验</string>
    <string name="button_review">提交审核</string>
    <string name="button_select">选择</string>
    <string name="button_withdraw">提现</string>
    <string name="button_finish">完成</string>
    <string name="button_submit_reserve">提交挂号需求</string>
    <string name="button_add_cart">加入购物车</string>
    <string name="button_buy_now">立即购买</string>
    <string name="button_reply">我要回复</string>
    <string name="button_record">记录</string>
    <string name="button_update">修改</string>
    <string name="button_reserve_comfirm">确认预约</string>
    <string name="button_video_comfirm">视频诊断</string>
    <string name="button_order_cancel">取消订单</string>
    <string name="button_pay">去付款</string>

    <string name="dialog_tip">提示</string>
    <string name="dialog_login_exit">是否注销当前用户?</string>

    <string name="main_item_main">首页</string>
    <string name="main_item_work">工作台</string>
    <string name="main_item_scan">发现</string>
    <string name="main_item_say">医言堂</string>
    <string name="main_item_my">我的</string>

    <string name="main_app_about">APP介绍</string>
    <string name="main_find_expert">找专家</string>
    <string name="main_find_hospital">找医院</string>
    <string name="main_medicine">医药</string>
    <string name="main_day_featured">每日精选</string>
    <string name="main_new_message">最新消息</string>s
    <string name="main_browser_count_format">浏览量  %s</string>
    <string name="main_reserve">预约管理</string>
    <string name="main_manager">患者管理</string>
    <string name="main_advisory">图文咨询</string>

    <string name="advisory_online_expert">在线专家</string>
    <string name="advisory_parttime_expert">兼职专家</string>
    <string name="advisory_project">治疗方案</string>
    <string name="online_expert_subject">选择科室</string>
    <string name="hospital_filter_address">选择地区</string>
    <string name="online_expert_sort">智能排序</string>
    <string name="expert_detail">专家详情</string>
    <string name="expert_be_expert_format">擅长：%s</string>
    <string name="expert_introduce">医生介绍：</string>
    <string name="expert_advisory_online">在线问诊</string>
    <string name="expert_advisory_video">视频预约</string>
    <string name="describe_problem_advisory">描述问题找医生</string>
    <string name="describe_problem_hint">您可以在输入框描述您的问题,包括身体状况,疾病和症状,将有专业的医生为您解答,并且保证您的隐私安全,(最少10个字)</string>
    <string name="advisory_comment_hint">您可以在输入框内输入评论内容</string>
    <string name="add_image">添加图片</string>
    <string name="add_image_hint">病症不菲,检查报告或者其他病情资料</string>
    <string name="expert_price_free">免费</string>
    <string name="expert_price_format">%s/h</string>
    <string name="expert_advisory_null">请输入咨询内容</string>
    <string name="expert_reservation_format">咨询费用：%s/h</string>
    <string name="expert_reservation_time_format">预约时间：%s</string>
    <string name="reservation_title">预约挂号</string>
    <string name="reservation_tip">请提交您的挂号需求</string>
    <string name="reservation_edit_hint">请输入50字以内的病症描述</string>
    <string name="advisort_time_format">预约时间：%s</string>

    <string name="patient_record_plain">诊断方案</string>
    <string name="patient_record_hint">请填写诊断方案内容或药物内容</string>
    <string name="patient_to_comfirm">待确认</string>
    <string name="patient_is_comfirm">已确认</string>
    <string name="patient_is_timeout">已过期</string>
    <string name="patient_is_cancel">已取消</string>
    <string name="patient_pre_pay">待付款</string>
    <string name="time_add_title">添加时间</string>
    <string name="time_manager_title">管理时间</string>

    <string name="find_medicine">找药</string>
    <string name="medicine_sale_format">销量 %s</string>
    <string name="find_medicine_room">找药房</string>
    <string name="medicine_room_title">药房详情</string>
    <string name="medicine_title">药品详情</string>
    <string name="flagstore_title">旗舰店信息</string>
    <string name="shop_detail_title">商品详情</string>
    <string name="shop_cart_title">购物车</string>
    <string name="order_title">订单填写</string>
    <string name="order_detail_title">订单详情</string>

    <string name="discover_detail">帖子详情</string>
    <string name="discover_comment_null">请输入评论内容</string>
    <string name="hot_search">热门搜索</string>
    <string name="discover_search_hint">请输入病症关键词</string>
    <string name="scan_crete_hint">分享健康动态&#8230;</string>
    <string name="descover_search_tip">相关资讯(%1$s)</string>
    <string name="descover_imformation">相关资讯</string>
    <string name="scan_create_title">发帖</string>
    <string name="scan_content_null">请输入帖子内容</string>

    <string name="select_photo_upload">(已选中%1$d张) 立即上传</string>

    <string name="my_history">历史咨询</string>
    <string name="advisory_comment">评论</string>
    <string name="my_appointment">我的预约</string>
    <string name="my_order">我的订单</string>
    <string name="my_integration">我的积分</string>
    <string name="my_service">服务协议</string>
    <string name="my_about">关于我们</string>
    <string name="my_setting">设置</string>
    <string name="my_income">我的收入</string>
    <string name="my_info">个人资料</string>
    <string name="my_help">帮助与反馈</string>
    <string name="my_setting_login">登录信息</string>
    <string name="my_setting_info">个人信息</string>
    <string name="my_setting_logout">退出登录</string>
    <string name="setting_login_phone">手机号码</string>
    <string name="setting_login_password">登录密码</string>
    <string name="setting_info_true_name">真实姓名：</string>
    <string name="setting_info_true_name_hint">请填写您的真实姓名</string>
    <string name="setting_info_name">用户昵称：</string>
    <string name="setting_info_name_hint">请填写用户昵称</string>
    <string name="setting_info_sex">用户性别：</string>
    <string name="setting_info_address">配送地址：</string>
    <string name="setting_info_address_hint">请填写您的配送地址</string>
    <string name="setting_info_email">电子邮箱：</string>
    <string name="setting_info_email_hint">请填写您的电子邮箱</string>
    <string name="setting_update_phone">更换手机号</string>
    <string name="setting_update_phone_tip">更换常用手机,可用新手机登录</string>
    <string name="crop_image">裁剪图片</string>
    <string name="upload_cancel">已取消上传</string>
    <string name="upload_progress">已上传%1$d%%</string>

    <string name="bank_select">选择银行卡</string>
    <string name="my_balance_format">余额：%s</string>
    <string name="bank_add">添加银行卡</string>
    <string name="withdraw_detail">提现详情</string>
    <string name="card_user">持卡人</string>
    <string name="withdraw_card">储蓄卡</string>
    <string name="withdraw_money">提现金额</string>
    <string name="card_number">卡号</string>

</resources>

