<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/toolbar_view" />

    <LinearLayout
        android:id="@+id/register_name_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/icon_size"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/register_name"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/register_name"
            style="@style/edit_view_style" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/register_sex_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/white_rectangle_bg"
        android:onClick="onClick"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_sex_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/register_sex"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:id="@+id/register_sex"
            android:layout_toRightOf="@id/register_sex_tip"
            style="@style/edit_view_style"
            android:gravity="center_vertical" />

        <ImageView
            android:layout_width="@dimen/fab_margin"
            android:layout_height="@dimen/fab_margin"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/auto_margin"
            android:src="@drawable/next_gray" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/register_phone_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/register_phone"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/register_phone"
            style="@style/edit_view_style"
            android:inputType="phone"
            android:maxLength="13" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/tab_height"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:text="@string/register_code"
                android:textSize="@dimen/text_size_middle" />

            <EditText
                android:id="@+id/register_code"
                style="@style/edit_view_style"
                android:inputType="numberSigned"
                android:maxLength="8" />

        </LinearLayout>

        <com.cjx.zhiai.component.GetCodeView
            android:id="@+id/button_get_code"
            android:layout_width="@dimen/hundred_dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/auto_margin"
            android:background="@drawable/gray_corners_rectangle_bg"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/button_get_code"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_middle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/register_password"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/register_password"
            style="@style/edit_view_style"
            android:inputType="textPassword"
            android:maxLength="16" />

    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        style="@style/submit_button_style"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/red_rectangle_bg"
        android:onClick="onClick"
        android:text="@string/button_register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auto_margin"
        android:text="@string/register_agree"
        android:textColor="@color/text_main_color"
        android:textSize="@dimen/text_size_middle" />

    <TextView
        android:id="@+id/register_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:padding="@dimen/auto_margin"
        android:text="@string/register_copyright"
        android:textColor="@color/main_color"
        android:textSize="@dimen/text_size_middle" />

</LinearLayout>