<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include layout="@layout/toolbar_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/icon_size"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/register_phone"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/update_phone"
            style="@style/edit_view_style"
            android:inputType="phone"
            android:maxLength="13" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/tab_height"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:text="@string/register_code"
                android:textSize="@dimen/text_size_middle" />

            <EditText
                android:id="@+id/update_code"
                style="@style/edit_view_style"
                android:inputType="numberSigned"
                android:maxLength="8" />

        </LinearLayout>

        <com.cjx.zhiai.component.GetCodeView
            android:id="@+id/button_get_code"
            android:layout_width="@dimen/hundred_dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/auto_margin"
            android:background="@drawable/get_code_btn"
            android:gravity="center"
            android:text="@string/button_get_code"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_middle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/update_password"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/update_password"
            style="@style/edit_view_style"
            android:inputType="textPassword"
            android:maxLength="16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/update_password_comfirm"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/update_password_comfirm"
            style="@style/edit_view_style"
            android:inputType="textPassword"
            android:maxLength="16" />

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        style="@style/submit_button_style"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/red_rectangle_bg"
        android:layout_marginBottom="@dimen/auto_margin"
        android:layout_marginTop="@dimen/auto_margin"
        android:onClick="onClick"
        android:text="@string/button_submit" />

</LinearLayout>